class IClassifier:
    def train(self,X,y,split_percent)->None:
        ...
    def test(self)->list[float]:
        ...
    def predict(self,X)->list[list[float]]:
        ...
    def report(self,output_path: str)->None:
        ...